[gd_scene load_steps=2 format=3 uid="uid://cmrynm3psuqfq"]

[ext_resource type="Script" path="res://scripts/connect_random.gd" id="1_52hte"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_52hte")

[node name="join" type="Button" parent="."]
offset_left = 5.0
offset_top = 13.0
offset_right = 256.0
offset_bottom = 191.0
text = "JOIN"

[node name="host" type="Button" parent="."]
offset_left = 275.0
offset_top = 29.0
offset_right = 472.0
offset_bottom = 146.0
text = "HOST"

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Label2" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Button" type="Button" parent="."]
offset_left = 208.0
offset_top = 278.0
offset_right = 433.0
offset_bottom = 406.0
text = "START"

[node name="Button2" type="Button" parent="."]
offset_left = 19.0
offset_top = 301.0
offset_right = 178.0
offset_bottom = 469.0
text = "test connection"

[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
